Changes for eye button in passwords

--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -9,7 +9,7 @@
           <div class="input-wrapper w-100">
             <div class="password-wrap">
               <input type="password" id="user" tabindex="0" #ss maxlength="30" formControlName="new_password"
-                name="new_password" class="form-control" autocomplete="new-password" placeholder="" #passwordInput />
+                name="new_password" class="form-control" autocomplete="new-password" placeholder="" #passwordInput appShowHidePassword />
               <label class="form-control-placeholder" for="user">Enter Password</label>
             </div>
             <div *ngIf="(f['new_password'].touched || submitted)" class="mt-3">
@@ -104,7 +104,7 @@
           <div class="input-wrapper w-100">
             <div class="password-wrap">
               <input type="password" id="pass" maxlength="30" formControlName="new_password_confirmation" name="cpassword"
-                class="form-control exemPass" autocomplete="off" />
+                class="form-control exemPass" autocomplete="off" appShowHidePassword/>
               <label class="form-control-placeholder" for="pass">Enter Confirm Password</label>
               <!-- appShowHidePassword -->
             </div>
