--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -233,3 +233,13 @@ img {
     }
   }
 }
+.pw-eye {
+  position: absolute;
+  top: 12px;
+  right: 10px;
+  font-size: 18px;
+
+  @media (min-width: 1440px) {
+    top: 12px;
+  }
+}
