--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,10 +27,7 @@
 
     <form class="login-form" [formGroup]="loginForm">
       <!-- LOGIN -->
-      <div class="form-group position-relative icon-input">
-        <!-- <span class="input-icon">
-          <img src="assets/img/car-icon.png" alt="login" />
-        </span> -->
+      <!-- <div class="form-group position-relative icon-input">
         <input
           type="text"
           class="form-control"
@@ -39,13 +36,10 @@
           autocomplete="username"
         />
         <label>Log In *</label>
-      </div>
+      </div> -->
 
       <!-- PASSWORD -->
-      <div class="form-group position-relative icon-input">
-        <!-- <span class="input-icon">
-          <img src="assets/img/lock-icon.png" alt="password" />
-        </span> -->
+      <!-- <div class="form-group position-relative icon-input">
         <input
           type="password"
           class="form-control"
@@ -54,7 +48,18 @@
           autocomplete="current-password"
         />
         <label>Password *</label>
-      </div>
+      </div> -->
+       <div class="form-group position-relative">
+      <!-- <div class="input-group-prepend"><img src="assets/img/email.png" class="pe-1"> </div> -->
+      <input type="text" id="name" class="form-control" required formControlName="email" autocomplete="username">
+      <label class="form-control-placeholder" for="name">Log In</label>
+    </div>
+    <div class="form-group position-relative">
+      <!-- <div class="input-group-prepend"><img src="assets/img/password.png" class="pe-1"> </div> -->
+      <input type="password" id="password" class="form-control" required formControlName="password" appShowHidePassword
+        autocomplete="current-password">
+      <label class="form-control-placeholder" for="password">Password</label>
+    </div>
 
       <button type="submit" class="login-btn" (click)="Login()">
         Login
