--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ textarea[readonly] {
   position: absolute;
   right: 9px;
   top: 10px;
-  content: url("assets/img/calender.png");
+  // content: url("assets/img/calender.png");
 }
 .floating-label {
   position: relative;
