--- a/src/assets/scss/pages/_pages.scss
+++ b/src/assets/scss/pages/_pages.scss
@@ -2,7 +2,7 @@
 @use "dashboard";
 @use "select-service";
 @use "user-manage";
-@use "escrow";
+@use "table";
 @use "view-certificate";
 @use "_release-req";
 @use "otpmodal";
