--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,11 +6,17 @@
        <div class="form-group position-relative">
       <input type="text" id="name" class="form-control" required formControlName="email" autocomplete="username">
       <label class="form-control-placeholder" for="name">Log In</label>
+        <app-show-errors [ctrl]="loginForm.get('email')"
+                        [requiredMesg]="'Email is Required'">
+                    </app-show-errors>
     </div>
     <div class="form-group position-relative">
       <input type="password" id="password" class="form-control" required formControlName="password" appShowHidePassword
         autocomplete="current-password">
       <label class="form-control-placeholder" for="password">Password</label>
+         <app-show-errors [ctrl]="loginForm.get('password')"
+                        [requiredMesg]="'Password is Required'">
+                    </app-show-errors>
     </div>
       <button type="button" class="login-btn" (click)="Login()">
         Login
